# jsonira

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: chat_api.rs  echo.rs  login_api.rs  main.rs  session_api.rs  todo_api.rs  user_api.rs  users.rs
src/api/: abac.rs  chat.rs  event.rs  mod.rs  session.rs  task.rs  todo.rs  user.rs
src/db/: chat.rs  mod.rs  task.rs  user.rs
src/model/: chat.rs  mod.rs  subject.rs  task.rs  user.rs
src/web/: task.rs
web/: about.txt  board.html  create-task.html  index.html  index.js  junk.txt  task.js
web/modules/: task.mjs
web/templates/: task.hbs
