[package]
name = "my-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {version = "1" }
tokio = {version = "1", features = ["full", "tracing"]}
http = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.4.1"
hyper-staticfile = "0.10"
hyper-rustls = { version = "0.27", features = ["http2"]}
warp = "0.3"