[package]
name = "my-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full", "tracing"]}
tokio-stream = "0.1.16"
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.4.1"

hyper = {version = "1" }
hyper-util = { version = "0.1", features = ["full"]}
hyper-rustls = { version = "0.27", features = ["http2"]}
warp = "0.3"

http = "1.0"
http-body-util = "0.1"
futures-util = "0.3.31"

serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.132"
bytes = "1.8.0"
serde_derive = "1.0.215"
chrono = { version = "0.4.38", features = ["serde"] }

jsonwebtokens = "1.2.0"
sqlite = "0.36.1"
