[package]
name = "my-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "fs", "sync", "time", "tracing"] }
tokio-stream = "0.1.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
console-subscriber = "0.4.1"

#hyper = {version = "1" }
#hyper-util = { version = "0.1", features = ["full"]}
#hyper-rustls = { version = "0.27", features = ["http2"]}

tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }

axum = { version = "0.7.9", features = ["http2", "ws", "multipart", "macros"] }
axum-server = {version = "0.7", features = ["tls-rustls"]}
axum-extra = { version = "0.9.6", features = ["cookie", "form", "query", "typed-header"] }
#http = "1.0"
#http-body-util = "0.1"
headers = "0.4.0"

futures = "0.3.31"
futures-util = "0.3.31"

serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.132"
bytes = "1.8.0"
serde_derive = "1.0.215"

jsonwebtokens = "1.2.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
argon2 = { version = "0.5.3", features = ["std"]}
base64 = "0.22.1"

thiserror = "2.0.6"
anyhow = "1.0.94"

sqlite = "0.36.1"
json-patch = "3.0.1"
eyre = "0.6.12"
jiff = { version = "0.1.15", features = ["serde"] }
humantime = "2.1.0"
humantime-serde = "1.1.1"
